hphp/hack/test/typecheck/unbound_name/fun_id.php
<?hh

function foo(): void {}

function test(): void {
  fun('foo');

  // Should error
  fun('not_found');
}
